Add the hero section of the page

--- a/index.html
+++ b/index.html
@@ -13,15 +13,49 @@
       rel="stylesheet"
     />
 
-    <!-- css -->
+    <!-- link for css -->
     <link rel="stylesheet" href="style.css" />
     <title>Mithali college</title>
   </head>
   <body>
     <header>
-        <nav>
-            <a href="index.html"><img src="images/brand-logo.svg" alt="Mithali college" class="brand"></a>
+        <nav class="nav">
+            <div class="container">
+                <a href="index.html"><img src="images/brand-logop.png" alt="Mithali college" class="brand"></a>
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Admission</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">About Us</a></li>
+                </ul>
+
+                <div>
+                    <a href="#" class="btn btn-secondary">Download Form</a>
+                    <a href="" class="btn btn-primary">Apply Now</a>
+                </div>
+            </div>
         </nav>
+        <section class="hero">
+            <div class="container">
+                <div class="content">
+                    <h1 class="l-heading">Second to None <span class="brand-secondary">Teaching,  Learning</span>  and <span class="brand-primary">Functional Education</span></h1>
+                    <p>
+                        Welcome to <span class="brand-secondary">MITHALII</span> <span class="brand-primary">COLLEGE</span> where we produce morally and educationally balanced Students. 
+                    </p>
+    
+                    <a href="#" class="btn btn-secondary">Download Form</a>
+                    <a href="" class="btn btn-primary">Apply Now</a>
+                </div>
+    
+                <div class="img">
+                    <div class="img-container">
+                        <img src="images/heroimg-bg.svg" alt="background shape" class="bg">
+                        <img src="images/hero-img.png" alt="" class="heroimg">
+                        <img src="images/heroimg-overlay.svg" alt="Overlay shape" class="overlay">
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
   </body>
 </html>
