adding new section to the landing page

--- a/index.html
+++ b/index.html
@@ -19,43 +19,136 @@
   </head>
   <body>
     <header>
-        <nav class="nav">
-            <div class="container">
-                <a href="index.html"><img src="images/brand-logop.png" alt="Mithali college" class="brand"></a>
-                <ul class="nav-menu">
-                    <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Admission</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">About Us</a></li>
-                </ul>
+      <nav class="nav">
+        <div class="container">
+          <a href="index.html"
+            ><img
+              src="images/brand-logop.png"
+              alt="Mithali college"
+              class="brand"
+          /></a>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Admission</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+            <li class="nav-item"><a href="" class="nav-link">About Us</a></li>
+          </ul>
 
-                <div>
-                    <a href="#" class="btn btn-secondary">Download Form</a>
-                    <a href="" class="btn btn-primary">Apply Now</a>
-                </div>
+          <div>
+            <a href="#" class="btn btn-secondary">Download Form</a>
+            <a href="" class="btn btn-primary">Apply Now</a>
+          </div>
+        </div>
+      </nav>
+      <section class="hero">
+        <div class="container">
+          <div class="content">
+            <h1 class="l-heading">
+              Second to None
+              <span class="brand-secondary">Teaching, Learning</span> and
+              <span class="brand-primary">Functional Education</span>
+            </h1>
+            <p>
+              Welcome to <span class="brand-secondary">MITHALI</span>
+              <span class="brand-primary">COLLEGE</span> where we produce
+              morally and educationally balanced Students.
+            </p>
+
+            <div class="cta">
+              <a href="#" class="btn btn-secondary">Download Form</a>
+              <a href="" class="btn btn-primary">Apply Now</a>
             </div>
-        </nav>
-        <section class="hero">
-            <div class="container">
-                <div class="content">
-                    <h1 class="l-heading">Second to None <span class="brand-secondary">Teaching,  Learning</span>  and <span class="brand-primary">Functional Education</span></h1>
-                    <p>
-                        Welcome to <span class="brand-secondary">MITHALII</span> <span class="brand-primary">COLLEGE</span> where we produce morally and educationally balanced Students. 
-                    </p>
-    
-                    <a href="#" class="btn btn-secondary">Download Form</a>
-                    <a href="" class="btn btn-primary">Apply Now</a>
-                </div>
-    
-                <div class="img">
-                    <div class="img-container">
-                        <img src="images/heroimg-bg.svg" alt="background shape" class="bg">
-                        <img src="images/hero-img.png" alt="" class="heroimg">
-                        <img src="images/heroimg-overlay.svg" alt="Overlay shape" class="overlay">
-                    </div>
-                </div>
+          </div>
+
+          <div class="img">
+            <div class="img-container">
+              <img
+                src="images/heroimg-bg.svg"
+                alt="background shape"
+                class="bg"
+              />
+              <img src="images/hero-img.png" alt="" class="heroimg" />
+              <img
+                src="images/heroimg-overlay.svg"
+                alt="Overlay shape"
+                class="overlay"
+              />
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
+      <div class="imgbgcolor"></div>
     </header>
+
+    <!-- SECTION: why us -->
+    <section id="why">
+      <div class="container">
+        <h1 class="l-heading">Why Us</h1>
+        <p>
+          <span class="brand-secondary">MITHALI</span>
+          <span class="brand-primary">COLLEGE</span> is an international
+          secondary school established to provide excellent academic and
+          leadership training for young minds. The institution is an outsanding
+          addition to the nations quest for academic excellence, providing
+          invaluable opportunities in a safe and secure environment for the
+          holistic development of the child.
+        </p>
+      </div>
+    </section>
+
+    <!-- SECTION: Count section -->
+    <section id="count">
+      <div class="container">
+        <div class="card">
+          <div class="num">300+</div>
+          <div class="detail">Total Reg Tutors</div>
+        </div>
+        <div class="card">
+          <div class="num">800+</div>
+          <div class="detail">Total Reg Students</div>
+        </div>
+        <div class="card">
+          <div class="num">800+</div>
+          <div class="detail">Total Reg Students</div>
+        </div>
+      </div>
+    </section>
+    <!-- SECTION: what we do -->
+    <section id="what">
+      <div class="container">
+        <h1 class="l-heading">
+          <span class="brand-secondary">At MITHALI</span>
+          <span class="brand-primary">COLLEGE</span> we Build
+        </h1>
+      </div>
+    </section>
+
+    <!-- section: Gallery -->
+
+    <!-- Section: Testimonials -->
+    <section id="testimonial">
+      <div class="container">
+        <h1 class="l-heading">Testimonials</h1>
+
+        <!-- testimonials content -->
+        <div class="testimonials">
+          <div class="card">
+            <p class="content">
+              I always thank Google and don jazzy for the opportunities they
+              gave me to be on the life changing training, It has been a great
+              ride for me, all thanks to all amazing tutors.
+            </p>
+            <strong class="brand-secondary">Mark Emmylyrics</strong>
+            <p class="brand-primary">Parent</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION: footer -->
+
+    <script src="app.js"></script>
   </body>
 </html>
