--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,9 @@
 			href="css/widescreen.css"
 		/>
 
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/tablet.css" />
+    <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css" />
+
     <title>Mithali college</title>
   </head>
   <body>
@@ -38,19 +41,27 @@
               alt="Mithali college"
               class="brand"
           /></a>
-          <ul class="nav-menu">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link ">Home</a>
-            </li>
-            <li class="nav-item"><a href="" class="nav-link">Admission</a></li>
-            <li class="nav-item"><a href="" class="nav-link active">Contact Us</a></li>
-            <li class="nav-item"><a href="" class="nav-link">About Us</a></li>
-          </ul>
+          <div class="nav-menu">
+            <ul>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link active">Home</a>
+              </li>
+              <li class="nav-item"><a href="admission.html" class="nav-link">Admission</a></li>
+              <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
+              <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+            </ul>
 
-          <div>
-            <a href="#" class="btn btn-secondary">Download Form</a>
-            <a href="" class="btn btn-primary">Apply Now</a>
+            <div>
+              <a href="#" class="btn btn-secondary">Download Form</a>
+              <a href="" class="btn btn-primary">Apply Now</a>
+            </div>
           </div>
+         
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
         </div>
       </nav>
     
