--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 			media="screen and (max-width: 768px)"
 			href="css/tablet.css"
 		/>
+    <link
+			rel="stylesheet"
+			media="screen and (max-width: 500px)"
+			href="css/mobile.css"
+		/>
 
     <title>Mithali college</title>
   </head>
