The about webpage

--- a/about.html
+++ b/about.html
@@ -85,12 +85,76 @@
             <h1 class="l-heading">
               About Us
             </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ante facilisi varius odio orci ut est pretium. Gravida massa viverra porta arcu. Nulla volutpat mauris tortor lacus, leo. Arcu tortor non tempor sollicitudin volutpat tristique ultricies. Magna nisl massa, magna amet, purus, etiam gravida mi. Aliquet iaculis suspendisse condimentum non lectus enim, pharetra est, elem</p>
+            <p>Mithali College is a co-educational Islamic oriented institution, founded to give balanced, broad and functional education in western and Islamic Education. In addition to sound academics, the aim is to produce a generation of people who are spiritually and morally sound, who can think for themselves, respect the views and feelings of others and those that will come out as frontline leaders of tomorrow in different areas of calling</p>
           </div>
           <div class="about-right">
             <div class="img-bg"></div>
             <img src="./images/about-img.png" alt="a girl image">
           </div>
+        </div>
+      </section>
+
+      <section class="miss-viz">
+        <div class="container">
+          <div class="vision">
+            <h1 class="l-heading">
+              Vision
+            </h1>
+            <p>
+              <span class="brand-secondary">MITHALI</span>
+              <span class="brand-primary">COLLEGE</span> is an international secondary school with the vision to  make the college second to none in the area of teaching, learning and functional Education.
+            </p>
+          </div>
+          <div class="mission">
+            <h1 class="l-heading">
+              Mission
+            </h1>
+            <p>
+              <span class="brand-secondary">At MITHALI</span>
+              <span class="brand-primary">COLLEGE</span> our mission is to produce morally balanced students who will be preferred candidates for higher institutions and employment in Nigeria and abroad.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="value">
+        <div class="container">
+          <h1 class="l-heading">The Values</h1>
+          <p>Saving time sourcing for tutors, and thereby allowing careers deliver results thats dries sucess and as well put money in their pockets.</p>
+
+          <div class="card">
+            <div class="box">
+              <div class="img">
+                <img src="./images/googleclassroom.png" alt="Google classroom icon">
+              </div>
+              <h4 class="subheading">DELIVERY</h4>
+              <p>We provide efficient learning solution</p>
+            </div>
+
+            <div class="box">
+              <div class="img">
+                <img src="./images/Team.png" alt="Google classroom icon">
+              </div>
+              <h4 class="subheading">TEAM</h4>
+              <p>Dedicated and passionate Innovators  fostering transparency and excellent tutorship.</p>
+            </div>
+            
+            <div class="box">
+              <div class="img">
+                <img src="./images/Trust.png" alt="Google classroom icon">
+              </div>
+              <h4 class="subheading">PASSION</h4>
+              <p> We have a passionate tutors who are keen to imapcting your wards</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="team">
+        <div class="container">
+          <h1 class="l-heading">
+            The Team
+          </h1>
+          <p>Meet the brains Behind MITHALI COLLEGE</p>
         </div>
       </section>
     <!-- SECTION: footer -->
