Restructuring the about Page

--- a/about.html
+++ b/about.html
@@ -155,6 +155,54 @@
             The Team
           </h1>
           <p>Meet the brains Behind MITHALI COLLEGE</p>
+
+          <div class="team-container">
+            <div class="profile">
+              <div class="img"><img src="./images/adaeze.png" alt="Project Manager"></div>
+              <h3 class="name">Adaeze</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/oluwatobi.png" alt="Project Manager"></div>
+              <h3 class="name">Tobiloba</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/mark.png" alt="Project Manager"></div>
+              <h3 class="name">Mark</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/adaeze.png" alt="Project Manager"></div>
+              <h3 class="name">Adaeze</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/oluwatobi.png" alt="Project Manager"></div>
+              <h3 class="name">Tobiloba</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/mark.png" alt="Project Manager"></div>
+              <h3 class="name">Mark</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/adaeze.png" alt="Project Manager"></div>
+              <h3 class="name">Adaeze</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/oluwatobi.png" alt="Project Manager"></div>
+              <h3 class="name">Tobiloba</h3>
+              <p>Project Manager</p>
+            </div>
+            <div class="profile">
+              <div class="img"><img src="./images/mark.png" alt="Project Manager"></div>
+              <h3 class="name">Mark</h3>
+              <p>Project Manager</p>
+            </div>
+          </div>
         </div>
       </section>
     <!-- SECTION: footer -->
